--- a/index.html
+++ b/index.html
@@ -3,43 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <title>Rahul Kashyap's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
-    <header class="bg-dark text-white p-3">
-        <div class="container">
-            <h1>Welcome to My Portfolio</h1>
-            <nav class="nav">
-                <a class="nav-link text-white" href="#about">About Me</a>
-                <a class="nav-link text-white" href="#projects">Projects</a>
-                <a class="nav-link text-white" href="#achievements">Achievements</a>
-                <a class="nav-link text-white" href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-    <main class="container mt-4">
-        <section id="about" class="my-5">
-            <h2>About Me</h2>
-            <p>Brief introduction about yourself.</p>
-        </section>
-        <section id="projects" class="my-5">
-            <h2>Projects</h2>
-            <p>Details about your projects.</p>
-        </section>
-        <section id="achievements" class="my-5">
-            <h2>Achievements</h2>
-            <p>Details about your achievements.</p>
-        </section>
-        <section id="contact" class="my-5">
-            <h2>Contact</h2>
-            <p>How people can reach you.</p>
-        </section>
-    </main>
-    <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2024 Your Name</p>
-    </footer>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <nav id="desktop-nav">
+    <div class="logo">John Doe</div>
+    <div>
+        <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Project</a></li>
+        <li><a href="#contact">Contacts</a></li>
+    </ul>
+    </div>
+</nav>
+,<nav id="hamburger-nav">
+    <div class="logo"> John DOe
+</div>
+<div class="hamburger-menu"></div>
+<div class="hamburger-icon" onclick="toggleMenu()">
+<span></span>
+<span></span>
+<span></span>
+</div>
+<div class="menu-links">
+    <li><a href="#about" onclick="toggleMenu()">About</a></li>
+    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+    <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
+    <li><a href="#contact" onclick="toggleMenu()">Contacts</a></li>
+</div>
+
+</nav>
+<script> src="script.js"</script>    
 </body>
 </html>
